objects/LAT_BI_Customer__c.object
<CustomObject>
    <description>Custom object used for integration of DB Contracts with Power BI</description>
    <fields>
        <fullName>LAT_BI_AN8_CUSTOMER__c</fullName>
        <label>AN8 CUSTOMER</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_CITY_CUSTOMER__c</fullName>
        <label>CD CITY CUSTOMER</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_COUNTRY_CUSTOMER__c</fullName>
        <label>CD COUNTRY CUSTOMER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_DISTRIBUTION_CANAL__c</fullName>
        <label>CD DISTRIBUTION CANAL</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_REGION__c</fullName>
        <label>CD REGION</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_SALESMAN_EMAIL__c</fullName>
        <label>CD SALESMAN EMAIL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_SEGMENTATION__c</fullName>
        <label>CD SEGMENTATION</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CNPJ_CUSTOMER_FORMATTED__c</fullName>
        <label>CNPJ CUSTOMER FORMATTED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CNPJ_CUSTOMER__c</fullName>
        <label>CNPJ CUSTOMER</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_CITY_CUSTOMER__c</fullName>
        <label>DS CITY CUSTOMER</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_CUSTOMER_SMALL_NAME__c</fullName>
        <label>DS CUSTOMER SMALL NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_CUSTOMER__c</fullName>
        <label>DS CUSTOMER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_DISTRIBUTION_CANAL__c</fullName>
        <label>DS DISTRIBUTION CANAL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_FREQUENCY_VISIT__c</fullName>
        <label>DS FREQUENCY VISIT</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_REGION__c</fullName>
        <label>DS REGION</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_SALESMAN__c</fullName>
        <label>DS SALESMAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_SEGMENTATION__c</fullName>
        <label>DS SEGMENTATION</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_UF__c</fullName>
        <label>UF</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>LAT BI Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_AN8_CUSTOMER__c</columns>
        <columns>LAT_BI_CNPJ_CUSTOMER__c</columns>
        <columns>LAT_BI_DS_CUSTOMER__c</columns>
        <columns>LAT_BI_DS_CUSTOMER_SMALL_NAME__c</columns>
        <columns>LAT_BI_UF__c</columns>
        <columns>LAT_BI_DS_REGION__c</columns>
        <columns>LAT_BI_CD_CITY_CUSTOMER__c</columns>
        <columns>LAT_BI_DS_CITY_CUSTOMER__c</columns>
        <columns>LAT_BI_DS_SEGMENTATION__c</columns>
        <columns>LAT_BI_DS_DISTRIBUTION_CANAL__c</columns>
        <columns>LAT_BI_CD_SALESMAN_EMAIL__c</columns>
        <columns>LAT_BI_DS_SALESMAN__c</columns>
        <columns>LAT_BI_DS_FREQUENCY_VISIT__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CU-{000000}</displayFormat>
        <label>LAT BI Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT BI Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>